--- a/interval-web/package.json
+++ b/interval-web/package.json
@@ -20,6 +20,7 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "esri-leaflet": "^3.0.12",
     "leaflet": "^1.9.4",
     "vue-cli-plugin-tailwind": "~3.0.0"
   }
