--- a/interval-web/package.json
+++ b/interval-web/package.json
@@ -20,8 +20,11 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
+    "chart.js": "^4.4.4",
     "esri-leaflet": "^3.0.12",
+    "floating-vue": "^5.2.2",
     "leaflet": "^1.9.4",
+    "vue-chartjs": "^5.3.1",
     "vue-cli-plugin-tailwind": "~3.0.0"
   }
 }
