--- a/interval-web/package.json
+++ b/interval-web/package.json
@@ -24,6 +24,7 @@
     "esri-leaflet": "^3.0.12",
     "floating-vue": "^5.2.2",
     "leaflet": "^1.9.4",
+    "leaflet.vectorgrid": "^1.3.0",
     "vue-chartjs": "^5.3.1",
     "vue-cli-plugin-tailwind": "~3.0.0"
   }
