--- a/interval-web/package.json
+++ b/interval-web/package.json
@@ -17,6 +17,7 @@
   },
   "devDependencies": {
     "@geoman-io/leaflet-geoman-free": "^2.17.0",
+    "@types/rbush": "^4.0.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-service": "~5.0.0",
@@ -25,6 +26,8 @@
     "floating-vue": "^5.2.2",
     "leaflet": "^1.9.4",
     "leaflet.vectorgrid": "^1.3.0",
+    "ol": "^10.2.1",
+    "pinia": "^2.2.2",
     "vue-chartjs": "^5.3.1",
     "vue-cli-plugin-tailwind": "~3.0.0"
   }
