--- a/interval-web/package.json
+++ b/interval-web/package.json
@@ -27,6 +27,7 @@
     "leaflet": "^1.9.4",
     "leaflet.vectorgrid": "^1.3.0",
     "ol": "^10.2.1",
+    "ol-layerswitcher": "^4.1.2",
     "pinia": "^2.2.2",
     "vue-chartjs": "^5.3.1",
     "vue-cli-plugin-tailwind": "~3.0.0"
